--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [tool.poetry]
 name = "pyhadeswap"
-version = "0.1.0"
+version = "0.2.9"
 description = "Hadeswap API for Python"
 authors = ["1S33dp1sk <mrkj@d-cloud.io>"]
+license = "MIT"
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-solana = "^0.20.0"
-solders = "^0.1.0"
-construct = "^2.10.56"
-base58 = "^2.1.0"
-anchorpy = "^0.1.0"
+python = "^3.11"
+solana = "^0.31.0"
+solders = "^0.19.0"
+anchorpy = "^0.18.0"
+construct = "^2.10.70"
+base58 = "^2.1.1"
 
-[tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
